src/objects/Platform__kav.object
<CustomObject><fields>
        <fullName>Atom__c</fullName>
        <description>Body of an Article</description>
        <inlineHelpText>This rich-text area is for the body of your content. The content should not deviate from the overall theme as indicated in the title and/or summary. This content should stand on its own as a cohesive and complete source of information.</inlineHelpText>
        <label>Atom</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the draft version is ready for approval</description>
        <inlineHelpText>Check this box if the article is ready to move into the approval workflow. An article cannot move out of Draft Stage without this box being checked. If you're completely satisfied with your draft, then click the "Submit for Approval" button.</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>agf__ADM_Epic__c</referenceTo>
        <relationshipLabel>Knowledge Articles</relationshipLabel>
        <relationshipName>Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Level_0__c</fullName>
        <description>Level 0 section for this sequence.</description>
        <inlineHelpText>Select a Level 0 section for this sequence.</inlineHelpText>
        <label>Level 0</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce Platform Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>O365 Platform Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Web Servies Component</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_1__c</fullName>
        <description>Level 1 section for this sequence.</description>
        <inlineHelpText>Select a Level 1 section for this sequence.</inlineHelpText>
        <label>Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Walkthrough</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_2__c</fullName>
        <description>Level 2 section for this sequence.</description>
        <inlineHelpText>Select a Level 2 section for this sequence.</inlineHelpText>
        <label>Level 2</label>
        <picklist>
            <controllingField>Level_1__c</controllingField>
            <picklistValues>
                <fullName>Legacy State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Platform Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Diagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object Schema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Mobile_Title__c</fullName>
        <description>Title for Tablet / Mobile View - Maximum 37 characters - Mandatory if the Platform Title is more than 37 characters</description>
        <inlineHelpText>Title for Tablet / Mobile View</inlineHelpText>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship to Series object</description>
        <inlineHelpText>Creates relationship to Series</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>Salesforce Products</value>
            </filterItems>
            <infoMessage>Search by Salesforce Custom Application or Product name.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>Platforms</relationshipLabel>
        <relationshipName>Platforms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an article through an approval process</description>
        <inlineHelpText>Tracks the stages of an article through an approval process</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Platforms</relationshipLabel>
        <relationshipName>Platforms</relationshipName>
        <type>Lookup</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Technology Platform Knowledge</description><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><label>Platform</label><pluralLabel>Platforms</pluralLabel><validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Platform Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules></CustomObject>